sass/_hero.sass
@use "_base" as *

#hero
  height: 70vh
  padding: 1em 0
  margin-bottom: 2em
  position: relative
  overflow: hidden
  display: flex
  align-items: center
  justify-content: center

  img
    position: absolute
    width: 100%
    height: 100%
    object-fit: cover
    object-position: center
    z-index: -1
    opacity: 0.4

  section
    text-align: center
    max-width: var(--max-one-col-width)
    width: 90%
    margin: auto

    h1
      font-size: 4em
      line-height: 1
      text-shadow: 0 0 25px white
      margin: 0

    p
      font-size: 1.2em
      text-shadow: 0 0 25px white
      margin: 2em auto 0 auto

    a
      display: inline-block
      margin: 2em auto 0 auto
      width: 5em
      padding: 5px
      border-radius: 5px
      color: white
      font-size: 1.2em
      text-decoration: none

      &.criteria
        background-color: white
        color: var(--heading-color)

      &.submit
        background-color: var(--heading-color)

    a + a
      margin-left: 1em

@media (max-width: $breakpoint)
  #hero section
    h1
      font-size: 3em

    p, a
      margin-top: 1em

